--- a/client/package.json
+++ b/client/package.json
@@ -10,27 +10,31 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
     "date-fns": "^4.1.0",
-    "framer-motion": "^12.23.24",
-    "lucide-react": "^0.548.0",
-    "react": "^19.1.1",
-    "react-confetti": "^6.4.0",
-    "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.4",
-    "recharts": "^3.4.1"
+    "framer-motion": "^11.5.4",
+    "lucide-react": "^0.447.0",
+    "react": "18.3.1",
+    "react-confetti": "^6.1.0",
+    "react-dom": "18.3.1",
+    "react-router-dom": "^6.26.2",
+    "recharts": "^3.5.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.36.0",
-    "@types/react": "^19.1.16",
-    "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^5.0.4",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.36.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.22",
-    "globals": "^16.4.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.18",
-    "vite": "^7.1.7"
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13",
+    "vite": "^5.4.8"
+  },
+  "resolutions": {
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
+  },
+  "overrides": {
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   }
 }
